[package]
name = "modeus-client"
version = "0.1.0"
authors = ["Swann Moreau <evertedsphere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.6.0"
log = "0.4.11"
modeus-common = { path = "../modeus-common" }
pretty_env_logger = "0.4.0"
tokio = "0.3.5"
