[package]
name = "modeus-common"
version = "0.1.0"
authors = ["tensegrist <tensegrist@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.6.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
tokio = "0.3.5"
